--- a/pages/blog.html
+++ b/pages/blog.html
@@ -92,7 +92,7 @@
                 </div>
                 <input type="text" placeholder="Your email">
                 <div class="button">
-                  <button class="btn">Get_Started</button>
+                  <button class="btn" id="started">Get_Started</button>
                 </div>
               </div>
             </div>
@@ -119,10 +119,10 @@
           <div class="row row-one">
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(1\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
@@ -130,10 +130,10 @@
             </div>
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(3\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
@@ -141,23 +141,23 @@
             </div>
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(5\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
               </div>
             </div>   
           </div>
-          <div class="row mt-lg-5 row-two">
+          <div class="row mt-lg-5 row-two" id="row2">
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(2\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
@@ -165,10 +165,10 @@
             </div>
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(4\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
@@ -176,10 +176,10 @@
             </div>
             <div class="col-lg-4 mb-4" data-aos="fade-down" data-aos-duration="2000">
               <div class="card">
-                <div class="image" style="background-image: url(../assets/images/blog-card-img\ \(6\).png);">
+                <div class="image">
                 </div>
                 <div class="text">
-                  <p>Insight - March 16,2023</p>
+                  <p>Insight • March 16,2023</p>
                   <h4>AI's Growing Influence: A Game Changer Across Industries</h4>
                   <p class="p2 mt-3">Artificial Intelligence (AI) has emerged as a game-changer, revolutionizing various industries.</p>
                 </div>
@@ -189,8 +189,6 @@
         </div>
       </div>
     </section>
-
-
     
     <!-- Footer -->
     <section class="footer" id="footer">
@@ -242,6 +240,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/script/navbar.js"></script>
+  <script src="../assets/script/blog.js"></script>
   <script>    
     AOS.init();
   </script> 
